@@ -5,11 +5,18 @@ Changelog of lizard-waterbalance
 0.15 (unreleased)
 -----------------
 
+
+- Improved the cache mechanism to be able to handle more performant cache
+  backends (read memcached).
+- Fixed the bug that caused an integrity error when the user tried to add a
+  previously removed concentration (ticket 2572 at
+  https://office.nelen-schuurmans.nl/trac/ticket/2572).
 - Fixed a bug that prevented the save to the database of a new WaterbalanceConf.
 - Fixed a bug in TimeseriesFews, which prevented the retrieval of the last
   event of a time series.
 - Enhanced TimeseriesFews so it can also handle events that have a valid date
   but have None for a value.
+
 
 
 0.14 (2011-04-06)
